--- a/Pipfile
+++ b/Pipfile
@@ -27,7 +27,9 @@ allow_prereleases = true
 [scripts]
 samples = "bash -c 'rm -f ./samples/images/*.out.jpg && PYTHONPATH=. python -m samples.process_all ./samples/images/*.jpg'"
 local_samples = "bash -c 'rm -f ./samples/local/images/*.out.jpg && PYTHONPATH=. python -m samples.process_all ./samples/local/images/*-input.jpg'"
+local_samples_pa = "bash -c 'rm -f ./samples/local/images/*.out.jpg && PYTHONPATH=. RESIZE=180x60 BW=1 python -m samples.process_all ./samples/local/images/*-input.jpg'"
 single_sample = "bash -c 'rm -f ./samples/images/easy1.out.jpg && PYTHONPATH=. python -m samples.process_all ./samples/images/easy1.jpg'"
+single_sample_pa = "bash -c 'rm -f ./samples/images/easy1.out.jpg && PYTHONPATH=. RESIZE=180x60 BW=1 python -m samples.process_all ./samples/images/easy1.jpg'"
 autoflake = "autoflake --remove-unused-variables --remove-all-unused-imports --ignore-init-module-imports --exclude .serverless,node_modules,frontend ."
 isort = "isort --recursive --skip .serverless --skip node_modules --skip frontend ."
 black = "black ."
